# auth-play

./: .envrc  .pre-commit-config.yaml  Cargo.toml  README.md  Taskfile.yaml  cliff.toml  config.sops.env
.taskfiles/: database.yaml  frontend.yaml
crates/apps/: Cargo.toml  build.rs
crates/apps/src/: config.rs  lib.rs
crates/auth-api/: Cargo.toml  build.rs
crates/auth-api-frontend/: Cargo.toml  build.rs
crates/auth-api-frontend/src/: lib.rs
crates/auth-api/src/: error.rs  http.rs  lib.rs
crates/auth-api/src/http/: auth.rs  handlers.rs  health.rs  session.rs  v1.rs
crates/auth-api/src/http/session/: adapter.rs
crates/auth-db/: Cargo.toml
crates/auth-db/src/: adapters.rs  error.rs  lib.rs  m20250106_194018_users.rs  m20250106_205738_sessions.rs
crates/auth-db/src/adapters/: session.rs  user.rs
crates/auth-db/src/entities/: mod.rs  prelude.rs  sessions.rs  users.rs
crates/auth-domain-api/: Cargo.toml
crates/auth-domain-api/src/: auth.rs  error.rs  lib.rs
crates/auth-domain-core/: Cargo.toml
crates/auth-domain-core/src/: auth.rs  health.rs  lib.rs
crates/auth-domain-core/src/services/: auth.rs  health.rs
crates/auth-domain-models/: Cargo.toml
crates/auth-domain-models/src/: auth.rs
crates/auth-utils/: Cargo.toml
crates/auth-utils/src/: argon2.rs  lib.rs
frontend/: .prettierrc  index.html  package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
frontend/src/lib/auth/: auth.ts
frontend/src/lib/components/: Login.svelte  Logout.svelte
frontend/src/routes/: +page.svelte
scripts/: create-database  create-release
