[workspace]
resolver = "2"
members = [
    "crates/apps"
]

[workspace.package]
version = "0.1.0" # managed by release.sh
edition = "2021"
authors = ["Scotte Zinn <scotte@zinn.ca>"]
license = "MIT"
homepage = "https://github.com/szinn/auth-play"
repository = "https://github.com/szinn/auth-play"
readme = "README.md"
rust-version = "1.83"

[workspace.dependencies]
tracing-log = "0.2.0"

[workspace.dependencies.tokio]
version = "1.39.1"
default-features = false
features = ["full"]

[workspace.dependencies.tracing]
version = "0.1.40"
features = ["log"]

[profile.release]
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true        # Enables link to optimizations
opt-level = "s"   # Optimize for binary size
debug = true      # Enable debug symbols, for profiling

[profile.dev]
split-debuginfo = "unpacked"
