[workspace]
resolver = "2"
members = [
    "crates/apps",
    "crates/auth-api-frontend",
    "crates/auth-api",
    "crates/auth-domain-api",
    "crates/auth-domain-core",
    "crates/auth-utils"
]

[workspace.package]
version = "0.1.0" # managed by release.sh
edition = "2021"
authors = ["Scotte Zinn <scotte@zinn.ca>"]
license = "MIT"
homepage = "https://github.com/szinn/auth-play"
repository = "https://github.com/szinn/auth-play"
readme = "README.md"
rust-version = "1.83"

[workspace.dependencies]
auth-api = { path = "crates/auth-api" }
auth-api-frontend = { path = "crates/auth-api-frontend" }
auth-domain-api = { path = "crates/auth-domain-api" }
auth-domain-core = { path = "crates/auth-domain-core" }
auth-utils = { path = "crates/auth-utils" }

async-trait = "0.1.84"
serde_json = "1.0.134"
thiserror = "2.0.9"
tokio-graceful-shutdown = "0.15.0"
tracing-log = "0.2.0"

[workspace.dependencies.serde]
version = "1.0.217"
features = ["derive"]

[workspace.dependencies.tokio]
version = "1.39.1"
default-features = false
features = ["full"]

[workspace.dependencies.tracing]
version = "0.1.40"
features = ["log"]

[profile.release]
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true        # Enables link to optimizations
opt-level = "s"   # Optimize for binary size
debug = true      # Enable debug symbols, for profiling

[profile.dev]
split-debuginfo = "unpacked"
