[workspace]
resolver = "2"
members = [
    "crates/apps",
    "crates/auth-api-frontend",
    "crates/auth-api",
    "crates/auth-db",
    "crates/auth-domain-api",
    "crates/auth-domain-core",
    "crates/auth-domain-models",
    "crates/auth-utils",
]

[workspace.package]
version = "0.1.0" # managed by release.sh
edition = "2021"
authors = ["Scotte Zinn <scotte@zinn.ca>"]
license = "MIT"
homepage = "https://github.com/szinn/auth-play"
repository = "https://github.com/szinn/auth-play"
readme = "README.md"
rust-version = "1.83"

[workspace.dependencies]
auth-api = { path = "crates/auth-api" }
auth-api-frontend = { path = "crates/auth-api-frontend" }
auth-db = { path = "crates/auth-db" }
auth-domain-api = { path = "crates/auth-domain-api" }
auth-domain-core = { path = "crates/auth-domain-core" }
auth-domain-models= { path = "crates/auth-domain-models" }
auth-utils = { path = "crates/auth-utils" }

async-trait = "0.1.85"
serde_json = "1.0.136"
thiserror = "2.0.11"
tokio-graceful-shutdown = "0.15.3"
tracing-log = "0.2.0"

[workspace.dependencies.chrono]
version = "0.4.34"
features = ["serde"]

[workspace.dependencies.serde]
version = "1.0.217"
features = ["derive"]

[workspace.dependencies.tokio]
version = "1.43.0"
default-features = false
features = ["full"]

[workspace.dependencies.tracing]
version = "0.1.40"
features = ["log"]

[workspace.dependencies.uuid]
version = "1.12.0"
features = ["serde", "v4", "v7"]

[profile.release]
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true        # Enables link to optimizations
opt-level = "s"   # Optimize for binary size
debug = true      # Enable debug symbols, for profiling

[profile.dev]
split-debuginfo = "unpacked"
