[package]
name = "auth-play"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true
build = "build.rs"
publish = false

default-run = "auth-play"

[[bin]]
name = "auth-play"
path = "src/bin/auth-play.rs"

[dependencies]
anyhow = "1.0.86"
log = "0.4.22"

tokio.workspace = true
tracing.workspace = true
tracing-log.workspace = true

[dependencies.clap]
version = "4.5.13"
features = ["cargo", "derive", "env"]

[dependencies.tracing-subscriber]
version = "0.3.18"
features = ["std", "fmt", "registry", "env-filter", "json"]
