[package]
name = "auth-api-frontend"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true
build = "build.rs"
publish = false

[dependencies]
rust-embed = { version = "8.5.0", features = ["compression"] }

[build-dependencies]
npm_rs = "1.0.0"
