[package]
name = "auth-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
auth-api-frontend.workspace = true
auth-domain-api.workspace = true
auth-domain-models.workspace = true
auth-utils.workspace = true

async-trait.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-graceful-shutdown.workspace = true
tracing.workspace = true
uuid.workspace = true

axum = "0.8.1"
axum-login = "0.17.0"
headers = "0.4.0"
mime_guess = "2.0.5"
rmp-serde = "1.3.0"

[dependencies.hyper]
version = "1.6.0"
features = ["full"]

[dependencies.hyper-util]
version = "0.1.10"
features = ["tokio", "server-auto", "http1"]

[dependencies.tower]
version = "0.5.2"
features = ["util"]

[dependencies.tower-http]
version = "0.6.2"
features = ["timeout", "trace"]

[dependencies.tower-sessions]
version = "0.14.0"
default-features = false
features = ["signed"]
