[package]
name = "auth-domain-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
auth-db.workspace = true
auth-domain-models.workspace = true
auth-utils.workspace = true

async-trait.workspace = true
serde.workspace = true
thiserror.workspace = true
uuid.workspace = true
