[package]
name = "auth-domain-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
auth-domain-api.workspace = true
auth-utils.workspace = true

async-trait.workspace = true
thiserror.workspace = true
tracing.workspace = true
