[package]
name = "auth-utils"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
argon2 = "0.5.3"
base16 = "0.2.1"
rand_core = { version = "0.6", features = ["std"] }
sha3 = "0.10.8"
