[package]
name = "auth-utils"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
argon2 = "0.5.3"
base16 = "0.2.1"
sha3 = "0.10.8"

[dependencies.rand_core]
version = "0.9.0"
features = ["std"]
